--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="title_activity_btf_landing">BtfLanding</string>
     <string name="title_activity_recupera_pass">RecuperaPass</string>
     <string name="title_activity_recupera_fin">RecuperaFinActivity</string>
+    <string name="title_activity_switch_user">SwitchUserActivity</string>
 </resources>
