--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="title_activity_recupera_fin">RecuperaFinActivity</string>
     <string name="title_activity_switch_user">SwitchUserActivity</string>
     <string name="title_activity_push_notification_center">PushNotificationCenterActivity</string>
+    <string name="title_activity_registro_main_activity">Registro_main_activity</string>
 </resources>
